--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "build": "vite build",
     "preview": "vite preview"
   },
- "dependencies": {
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "vite": "^4.5.0",           <-- Moved here!
-  "framer-motion": "^10.12.16",
-  "react-icons": "^4.12.0",
-  "typewriter-effect": "^2.19.0"
-},
-"devDependencies": {
-  "tailwindcss": "^3.3.2",
-  "postcss": "^8.4.24",
-  "autoprefixer": "^10.4.15"
+  "dependencies": {
+    "framer-motion": "^10.12.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "typewriter-effect": "^2.19.0",
+    "vite": "^4.5.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
+  }
 }
